# 071-llm-risk-assessment

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python_llm_risk/: README.md  bybit_client.py  requirements.txt  risk_assessment.py  trading_strategy.py
rust_llm_risk/: Cargo.toml  README.md
rust_llm_risk/examples/: assess_risk.rs  backtest.rs  fetch_data.rs
rust_llm_risk/src/: lib.rs  main.rs
rust_llm_risk/src/llm/: client.rs  mod.rs  provider.rs
rust_llm_risk/src/risk/: assessor.rs  mod.rs  score.rs
rust_llm_risk/src/strategy/: backtest.rs  mod.rs  signal.rs  trader.rs
rust_llm_risk/src/utils/: config.rs  mod.rs
